# signalscout---Cross-modal-RAG-for-market-signals.

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: golden_dataset.jsonl
docker/: Dockerfile.api
docker/prometheus/: prometheus.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentStatusBar.jsx  BriefPanel.jsx  BullishMeter.jsx  CitationPanel.jsx  ConfidencePanel.jsx  ContradictionAlert.jsx  QueryPanel.jsx  TechnicalGuide.jsx  UploadPanel.jsx
frontend/src/components/ui/: animated-number.jsx  grid-beam.jsx  shader-background.jsx  texture-button.jsx  texture-card.jsx
scripts/: ingest_cli.py
signalscout/: __init__.py  config.py
signalscout/agents/: graph.py  retriever.py  state.py
signalscout/api/: main.py
signalscout/eval/: harness.py
signalscout/ingestion/: audio.py  charts.py  edgar.py  embedder.py  news.py
signalscout/models/: __init__.py  database.py  schemas.py
signalscout/observability/: metrics.py
signalscout/workers/: tasks.py
